--- a/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
+++ b/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
@@ -57,7 +57,10 @@
 \pagestyle{fancy}
 
 
-\import{Parts/Part-1/Chapter-1}{section-1.tex}
+\import{Parts/Part-1/Chapter-1}{Section-1.tex}
+\import{Parts/Part-1/Chapter-1}{Section-2.tex}
+
+\import{Parts/Part-1/Chapter-2}{Section-1.tex}
 
 
 \end{document}
