--- a/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
+++ b/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
@@ -15,13 +15,13 @@
 
 \noindent\textbf{前言：}
 
-笔者为软件工程系在校本科生，主要用 JavaScript 做一些前端项目。
+笔者为软件工程系在校本科生，主要用 JavaScript 做一些前端项目。本文默认读者知道计算机基础知识(二进制，补码，异或运算，控制流程)，也默认有其他 C 语言系语言(Java，Python，C++...)的基础，JavaScript 和 Java 语言语法有诸多相似之处，这些相似的基础语言不再说明。
 
 <<JavaScript 高级程序设计>> 是 JavaScript 学习的一本入门及进阶书，原书中文版多达117万字，笔者将其分为三个部分：
 \begin{itemize}
-    \item JavaScript 基础：数据结构，分支语句，函数，面向对象等基础知识
-    \item JavaScript 进阶：异步，多线程，DOM，BOM，JSON/XML 处理等常用知识
-    \item JavaScript 前沿：ES6 之后的新特性。
+    \item ECMAScript：数据结构，分支语句，函数，面向对象等基础知识
+    \item DOM 与 BOM：与网页相关的内容
+    \item JavaScript 前沿：新特性与技术。
 \end{itemize}
 
 本笔记不能代替原书，仅是对原书的一个总结归纳，笔记上只有知识点的总结，并没有详细的理解性语句，如有需要，还请购买原书。本文所在Github仓库采用 GPL v3 协议，但请勿将本文商业使用，本文引用了一些 CSDN 或其他论讨的文章，如果原作者觉得不合适，请联系本人。
@@ -47,10 +47,13 @@
     \item Window10: 10.0.19042
 \end{itemize}
 
-此外，JavaScript 是一门语法十分宽松的语言，其语法在某些方面甚至比 Python 都要自由，但考虑到可读性，笔记中只强调推荐的写法，至于一些可行但不推荐的写法，仅提示。
+此外，JavaScript 是一门语法十分宽松的语言，其语法在某些方面甚至比 Python 都要自由，但考虑到可读性，笔记中只强调推荐的写法，至于一些可行但不推荐的写法，仅提示。相信读者都有其他高级语言基础，一些基本准则也只提出，不说明具体原因。
 
 \date{\today}
+\newpage
+
 \tableofcontents
+
 \newpage
 
 \setcounter{page}{1} 
@@ -59,8 +62,8 @@
 
 \import{Parts/Part-1/Chapter-1}{Section-1.tex}
 \import{Parts/Part-1/Chapter-1}{Section-2.tex}
-
-\import{Parts/Part-1/Chapter-2}{Section-1.tex}
+\import{Parts/Part-1/Chapter-2}{Section-3.tex}
+\import{Parts/Part-1/Chapter-2}{Section-4.tex}
 
 
 \end{document}
