--- a/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
+++ b/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
@@ -15,7 +15,7 @@
 
 \noindent\textbf{前言：}
 
-笔者为软件工程系在校本科生，主要用 JavaScript 做一些前端项目。本文默认读者知道计算机基础知识(二进制，补码，异或运算，控制流程)，也默认有其他 C 语言系语言(Java，Python，C++...)的基础，JavaScript 和 Java 语言语法有诸多相似之处，这些相似的基础语言不再说明。
+笔者为软件工程系在校本科生，主要用 JavaScript 做一些前端项目。本文默认读者知道计算机基础知识(二进制，补码，异或运算，控制流程)，也默认有其他 C 语言系语言(Java，Python，C++...)的基础(也就是说本文不适合完全无基础的读者。)，JavaScript 和 Java 语言语法有诸多相似之处，这些相似的基础语言不再说明。
 
 <<JavaScript 高级程序设计>> 是 JavaScript 学习的一本入门及进阶书，原书中文版多达117万字，笔者将其分为三个部分：
 \begin{itemize}
