--- a/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
+++ b/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
@@ -24,6 +24,8 @@
     \item JavaScript 前沿：新特性与技术。
 \end{itemize}
 
+本人并不是很喜欢原书的书写顺序，基础知识与高阶内容往往混在一起。因此，本人对文章结构做了一定修改。
+
 本笔记不能代替原书，仅是对原书的一个总结归纳，笔记上只有知识点的总结，并没有详细的理解性语句，如有需要，还请购买原书。本文所在Github仓库采用 GPL v3 协议，但请勿将本文商业使用，本文引用了一些 CSDN 或其他论讨的文章，如果原作者觉得不合适，请联系本人。
 
 此外，关于 Web 开发，避不开又令所有技术员头疼的是各种历史遗留问题，以及不同浏览器兼容问。，由于笔者仅为一名大三学生，预计读完研究生后才会真正工程性地利用这些技术\footnote{希望到时候没这些问题}。所以对于这些历史与兼容问题，除非特别重要，笔记中不再详述。这些问题包括：
