--- a/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
+++ b/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
@@ -66,6 +66,7 @@
 \import{Parts/Part-1/Chapter-1}{Section-2.tex}
 \import{Parts/Part-1/Chapter-2}{Section-3.tex}
 \import{Parts/Part-1/Chapter-2}{Section-4.tex}
+\import{Parts/Part-1/Chapter-2}{Section-5.tex}
 
 
 \end{document}
