--- a/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
+++ b/JavaScript/ProfessionalJavaScript/ProfessionalJavaScript.tex
@@ -17,9 +17,11 @@
 
 笔者为软件工程系在校本科生，主要用 JavaScript 做一些前端项目。本文默认读者有一定的编程基础(至少会一门C语言系语言)，基础语法不再说明。
 
+JavaScript 语法非常灵活(乱), 有很多没必要记的东西，也有很多不明所以的设计方案，这和他的历史有关。现在主流的做法是使用 TypeScript 编写前端脚本，因此本人增加了 TypeScript 这一部分。
+
 <<JavaScript 高级程序设计>> 是 JavaScript 学习的一本入门及进阶书，原书中文版多达117万字，笔者将其分为如下几个部分：
 \begin{itemize}
-    \item ECMAScript：介绍ECMAScript的语法。
+    \item ECMAScript：介绍ECMAScript(JavaScript)的语法。
     \item TypeScript: 介绍TypeScript的语法。 
     \item DOM 与 BOM：与 Web 开发相关的内容。
     \item API：处理各类事务文件的接口。
@@ -58,9 +60,10 @@
 \import{Parts/Part-ECMAScript/Chapter-Type}{Simple.tex}
 \import{Parts/Part-ECMAScript/Chapter-Type}{Reference.tex}
 \import{Parts/Part-ECMAScript/Chapter-Type}{Collection.tex}
-\chapter{函数}
+\chapter{函数与类}
 \import{Parts/Part-ECMAScript/Chapter-Function}{Function.tex}
 \import{Parts/Part-ECMAScript/Chapter-Function}{Iterator.tex}
+\import{Parts/Part-ECMAScript/Chapter-Function}{Class.tex}
 
 
 \end{document}
